--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.21",
+        "@popperjs/core": "^2.5.3",
+        "alpinejs": "^3.2.6",
+        "axios": "^0.22.0",
+        "bootstrap": "^5.1.0",
         "laravel-mix": "^6.0.6",
-        "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "lodash": "^4.17.21",
+        "postcss": "^8.3.9",
+        "resolve-url-loader": "^3.1.4",
+        "sass": "^1.42.1",
+        "sass-loader": "^12.1.0"
     }
 }
